--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <h3>Formatos de Intervención</h3>
                 <p>Descarga los documentos necesarios para las sesiones psicológicas.</p>
-                <a href="#" class="btn">Ver Documentos</a>
+                <a href="#" class="btn">Ver Documentos SAPO</a>
             </div>
 
             <div class="card">
